--- a/app.yaml
+++ b/app.yaml
@@ -5,5 +5,11 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /static
+  static_dir: static
 - url: /.*
-  script: main.app
+  script: blog.app
+
+libraries:
+- name: jinja2
+  version: latest
