--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-# defines several options for the app, 
+# defines several options for the app,
 # and describes which handler scripts should be used for which URLs.
 runtime: python27
 api_version: 1
@@ -8,7 +8,7 @@ handlers:
 - url: /static
   static_dir: static
 - url: /.*
-  script: blog.app
+  script: main.app
 
 libraries:
 - name: jinja2
