--- a/index.yaml
+++ b/index.yaml
@@ -12,6 +12,12 @@ indexes:
 
 - kind: Comment
   properties:
+  - name: post
+  - name: created
+    direction: desc
+
+- kind: Comment
+  properties:
   - name: post_id
   - name: created
     direction: desc
